[gd_scene load_steps=7 format=3 uid="uid://omxyukgp61bw"]

[ext_resource type="Script" uid="uid://o62f4k604x6h" path="res://apps/photoshop_app/photoshop_app.gd" id="1_5byx1"]
[ext_resource type="Script" uid="uid://krmcm86dpw8a" path="res://apps/photoshop_app/multipolygon.gd" id="2_b7jc0"]
[ext_resource type="Texture2D" uid="uid://u7milfln4xo0" path="res://icon.svg" id="2_khpmc"]
[ext_resource type="Script" uid="uid://dsbxsdbpygkhs" path="res://apps/photoshop_app/editing_panel.gd" id="2_pedke"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_4qq7r"]
size = Vector2(1, 60)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_5byx1"]
size = Vector2(60, 1)

[node name="PhotoshopApp" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5byx1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
z_index = 1
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_4qq7r")

[node name="Filebar" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/Filebar"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Save"

[node name="ResetButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/Filebar"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="ExportButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/Filebar"]
unique_name_in_owner = true
layout_mode = 2
text = "Export"

[node name="Body" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="ToolbarContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/Body"]
z_index = 1
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer"]
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_5byx1")

[node name="Toolbar" type="VBoxContainer" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer"]
layout_mode = 2

[node name="LassoButton" type="Button" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Lasso"

[node name="CutButton" type="Button" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Lasso"

[node name="UndoButton" type="Button" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Lasso"

[node name="RedoButton" type="Button" parent="PanelContainer/VBoxContainer/Body/ToolbarContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
text = "Lasso"

[node name="EditingPanel" type="Control" parent="PanelContainer/VBoxContainer/Body"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("2_pedke")

[node name="EditingAnchor" type="Control" parent="PanelContainer/VBoxContainer/Body/EditingPanel"]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 610.0
offset_top = 330.0
offset_right = 610.0
offset_bottom = 330.0

[node name="EditableImage" type="Node2D" parent="PanelContainer/VBoxContainer/Body/EditingPanel/EditingAnchor"]
unique_name_in_owner = true
script = ExtResource("2_b7jc0")
texture = ExtResource("2_khpmc")

[node name="Sprite2D" type="Polygon2D" parent="PanelContainer/VBoxContainer/Body/EditingPanel/EditingAnchor/EditableImage"]
texture = ExtResource("2_khpmc")
texture_offset = Vector2(64, 64)
polygon = PackedVector2Array(64, -64, 64, 64, -64, 64, -64, -64)

[node name="Cutter" type="Polygon2D" parent="PanelContainer/VBoxContainer/Body/EditingPanel/EditingAnchor"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -2.78261)
scale = Vector2(1, 0.956522)
polygon = PackedVector2Array(-35, 25.9091, 11, 18.5909, 32, -42.0454, -21, -26.3636)

[node name="PastedSelection" type="Node2D" parent="PanelContainer/VBoxContainer/Body/EditingPanel/EditingAnchor"]
unique_name_in_owner = true
script = ExtResource("2_b7jc0")

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/Body/EditingPanel/EditingAnchor"]
layout_mode = 0
offset_left = -313.0
offset_top = -35.0
offset_right = -198.0
offset_bottom = -4.0
text = "show selection polygon"
